--- a/CSS_LEVEL_TWO/project.html
+++ b/CSS_LEVEL_TWO/project.html
@@ -9,25 +9,25 @@
 </head>
 
 <body>
-    <h1 class="text">Welcome to the Landing Page</h1>
-    <h2 class="text">We're a start-up that does something</h2>
-    <p class="text" id="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora excepturi nesciunt esse labore, delectus
+    <h1>Welcome to the Landing Page</h1>
+    <h2>We're a start-up that does something</h2>
+    <p id="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora excepturi nesciunt esse labore, delectus
         dicta vitae nostrum eius, asperiores consequuntur id atque ipsa est. Tempore quos ducimus obcaecati asperiores.
     </p>
-    <p class="text" id="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora excepturi nesciunt esse labore, delectus
+    <p id="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora excepturi nesciunt esse labore, delectus
         dicta vitae nostrum eius, asperiores consequuntur id atque ipsa est. Tempore quos ducimus obcaecati asperiores.
     </p>
-    <h2 class="text">Sign up for our upcoming lauch!</h2>
+    <h2>Sign up for our upcoming lauch!</h2>
     <form method="get" action="thankyou.html">
-        <p class="text">
+        <p>
             <label for="fn">First Name:</label><br>
             <input type="text" name="firstname" id="fn" required>
         </p>
-        <p class="text">
+        <p>
             <label for="ln">Last Name:</label><br>
             <input type="text" name="lastname" id="ln" required>
         </p>
-        <p class="text">
+        <p>
             <label for="mail">Email:</label><br>
             <input type="email" name="email" id="mail" required>
         </p>
