--- a/CSS_LEVEL_TWO/thankyou.html
+++ b/CSS_LEVEL_TWO/thankyou.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Thank you</title>
     <link rel="stylesheet" href="project_master.css">
+    <link href="https://fonts.googleapis.com/css?family=Chivo" rel="stylesheet">
 </head>
 <body>
     <h2 class="text">Thanks for signing up!</h2>
